--- a/index.html
+++ b/index.html
@@ -18,20 +18,37 @@
     </div>
     <div class="main page" id="about">
         <h1>Hej jestem Kacper</h1>
-        <a>a web developer</a>
+        <p><span>a</span> <span>web</span> <span>developer</span></p>
     </div>
     <div class="projects page" id="projects">
-        <h1>Projects Page</h1>
-        <a>a web developer</a>
+        <h1>My projects</h1>
+        <div class="projectsCon">
+            <div class="project">
+                <p>Kółko i krzyżyk</p>
+                <img class="projectImg" src="https://play-lh.googleusercontent.com/DihTYnmuZdVKQQ0GYJ7N-cmG2euCybFZvdjA4_kUhgZ1WgT0OiCRHvL0Fg7CjDrj8g">
+            </div>
+            <div class="project">
+                <p>Kółko i krzyżyk</p>
+                <img class="projectImg" src="https://play-lh.googleusercontent.com/DihTYnmuZdVKQQ0GYJ7N-cmG2euCybFZvdjA4_kUhgZ1WgT0OiCRHvL0Fg7CjDrj8g">
+            </div>
+            <div class="project">
+                <p>Kółko i krzyżyk</p>
+                <img class="projectImg" src="https://play-lh.googleusercontent.com/DihTYnmuZdVKQQ0GYJ7N-cmG2euCybFZvdjA4_kUhgZ1WgT0OiCRHvL0Fg7CjDrj8g">
+            </div>
+        </div>
+  
     </div>
     <div class="contact page" id="contact">
-        <h1>Contact Page</h1>
-        <a>a web developer</a>
+        <div class="contactCon">
+            <h1 id="contactText">Let's work together...</h1>
+            <a href="https://instagram.com/k.zagrodzki">
+                <img src="https://static-00.iconduck.com/assets.00/instagram-icon-2048x2048-7k1fyiab.png">
+                instagram
+            </a>
+        </div>
     </div>
     <div class="footer">
-
+        ©MADE BY KACPER ZAGRODZKI
     </div>
 </body>
-<script src="app.js"></script>
-
 </html>
